--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,3 +36,22 @@ body {
     font-size: calc(0.7vw + 0.7vw + .5vmin);
     font-weight: 1;
 }
+.tm-current-score {
+    font-size: calc(1.7vw + 1.7vw + .5vmin);
+    font-weight: 1;
+}
+button {
+    position: absolute;
+    width: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    background: none;
+    border: none;
+    font-family: Lato;
+    font-size: calc(0.5vw + 0.5vw + .5vmin);
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 1;
+    transition: background-color 0.3s, color 0.3s;
+}
