--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,19 @@ body {
   font-size: calc(2vw + 2vw + .5vmin);
   font-weight: 1;
 }
+.sorry-0,.sorry-1 {
+  display: none;
+  border: 1px solid black;
+  width: 20%;
+  margin: 0 auto;
+  font-size: calc(0.7vw + 0.7vw + .5vmin);
+}
+.tm-active {
+  height: 100vh;
+}
+.tm-active .tm-name {
+  font-weight: 300;
+}
 .tm-score {
   font-size: calc(1.7vw + 1.7vw + .5vmin);
   margin-bottom: 50px;
@@ -36,6 +49,7 @@ body {
     font-size: calc(0.7vw + 0.7vw + .5vmin);
     font-weight: 1;
 }
+
 .tm-current-score {
     font-size: calc(1.7vw + 1.7vw + .5vmin);
     font-weight: 1;
@@ -55,3 +69,45 @@ button {
     font-weight: 1;
     transition: background-color 0.3s, color 0.3s;
 }
+
+button:hover {
+  font-weight: 600;
+}
+button:hover i {
+  margin-right: 20px;
+}
+
+button:focus {
+    outline: none;
+}
+
+i {
+    color: #fff;
+    display: inline-block;
+    margin-right: 15px;
+    font-size: calc(0.5vw + 0.5vw + .5vmin);
+    line-height: 1;
+    vertical-align: text-top;
+    margin-top: -4px;
+    transition: margin 0.3s;
+}
+
+.btn-new {
+  top: 345px;
+}
+.btn-roll {
+  top: 403px;
+}
+.btn-hold {
+  top: 467px;
+}
+.dice {
+    position: absolute;
+    left: 50%;
+    top: 178px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+.winner { background-color: #f7f7f7; }
+.winner .player-name { font-weight: 300; color: #EB4D4D; }
